tests/models/struct/unnamed/u64/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    u64
);
fn main() {}
